tests/api/reference/negative/11-new-arity.asm
const invalid: bytes = bytes.new(1)
